Add a registration for new users
