# openapi.yml
@@ -268,6 +268,34 @@ paths:
       security:
         - user_auth:
             - delete:admin
+  /users/register:
+    post:
+      tags:
+        - users
+      summary: Create a new account
+      description: Create a new account. Anyone can create a new account.
+      operationId: register
+      requestBody:
+        description: Send only what's needed
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegisterPost'
+        required: true
+      responses:
+        '200':
+          description: Successful operation - return the whole user informations
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RegisterResponse'
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not found
+      security:
+        - user_auth:
+            - write:admin
   /auth/login:
     post:
       tags:
@@ -674,6 +702,46 @@ components:
     UserResponse:
       type: object
       properties:
+        id:
+          type: string
+          example: 63442662c073e
+        firstName:
+          type: string
+          example: John
+        lastName:
+          type: string
+          example: Doe
+        username:
+          type: string
+          example: johndoe
+        role:
+          type: string
+          example: user
+    RegisterPost:
+      type: object
+      properties:
+        firstName:
+          type: string
+          example: John
+        lastName:
+          type: string
+          example: Doe
+        username:
+          type: string
+          example: johndoe
+        password:
+          type: string
+      required: 
+        - firstName
+        - lastName
+        - username
+        - password
+    RegisterResponse:
+      type: object
+      properties:
+        message: 
+          type: string
+          example: "User successfuly created !"
         id:
           type: string
           example: 63442662c073e
